[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bluecat-bam-tools"
version = "0.1.0"
description = "Tools for working with BlueCat Address Manager"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/Tufts-Technology-Services/bluecat-bam-tools"

